--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,6 @@
   <body>
     <script src = "app.js">
     </script>
-    < <span> "hello, world" </span>
+    <span> "hello, world" </span>
   </body>
 </html>
