--- a/web-start/index.html
+++ b/web-start/index.html
@@ -107,15 +107,40 @@
 
     </div>
     <div margin: 20px;>
-      <h1 class="h1-title" id="message" style="padding:50px;"> All Clear </h1>
+      <p class="h1-title" id="Title" style="padding:50px;"> All Clear </p>
       <h1 class="h1-title" id="distance"></h1>
     </div>
     <div id="map" style="width:100%;height:500px">
     </div>
+    <button onclick="default_mymap()"> Refresh </button>
 
-    <p id='test_x'> </p>
-    <p id='test_y'> </p>
-    <button onclick="mymap()"> Click me </button>
+    <!-- <div onload="generate_interactive_table()" style="margin-top: 20px; margin-right: auto; margin-left: auto; width: 800px;">
+      <table id="table" width=70% border="1">
+              <tr>
+                  <th>Time</th>
+                  <th>Latitude</th>
+                  <th>Longitude</th>
+              </tr>
+
+              <tr>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+              </tr>
+
+              <tr>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+              </tr>
+
+          </table>
+        </div>
+
+        <div onload="log_data()"></div>
+
+        <p id="test" style="margin: 10px;"> test </p>
+      </div> -->
   </main>
 </div>
 
